--- a/AriesParts/res/values/strings.xml
+++ b/AriesParts/res/values/strings.xml
@@ -36,6 +36,14 @@
     <string name="hspa_title_head">HSPA</string>
     <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>
 
+    <string name="category_tvout_title">TV Out</string>
+    <string name="tvout_enable_head">TV Out</string>
+    <string name="tvout_enable_summary_nocable">TV Out cable not connected</string>
+    <string name="tvout_enable_summary">TV Out cable connected, check to enable</string>
+    <string name="tvout_enable_summary_on">TV Out enabled</string>
+    <string name="tvout_system_head">TV System</string>
+    <string name="tvout_system_summary">Set your TV system for TV Out</string>
+
     <string name="category_volume_boost_title">Volume Controls</string>
     <string name="volume_boost_title_head">In-Call Volume Controls</string>
     <string name="volume_boost_summary_head">Boost in-call volume settings</string>
@@ -72,4 +80,5 @@
     <string name="imei_not_sane_title">Warning!</string>
     <string name="imei_not_sane_message">A problem was detected with your device. Your device IMEI number is invalid. An invalid IMEI number could cause network issues including the inability to call emergency numbers.</string>
     <string name="imei_not_sane_ok">OK</string>
+
 </resources>
